[project]
name = "python-planet"
version = "3.0"
description = "PythonPlanet RSS/Atom feed aggregator"
readme = { file = "code/README.pydotorg", content-type="text/markdown" }

requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.11",
    "jinja2>=3.1.4",
]

[[authors]]
name = "Scott James Remnant"
email = "scott@netsplit.com"

[[authors]]
name = "Jeff Waugh"
email = "jdub@perkypants.org"

[[authors]]
name = "Jacob Coffee"
email = "jacob@z7x.org"

[[authors]]
name = "Chris Rose"
email = "offline@offby1.net"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core/planet"]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.383",
]
