[project]
name = "python-planet"
version = "3.0"
description = "PythonPlanet RSS/Atom feed aggregator"
readme = { file = "code/README.pydotorg", content-type="text/markdown" }

requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.11",
    "jinja2>=3.1.4",
]

[[authors]]
name = "Scott James Remnant"
email = "scott@netsplit.com"

[[authors]]
name = "Jeff Waugh"
email = "jdub@perkypants.org"

[[authors]]
name = "Jacob Coffee"
email = "jacob@z7x.org"

[[authors]]
name = "Chris Rose"
email = "offline@offby1.net"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code/planet"]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.383",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[tool.pytest.ini_options]
looponfailroots = ["code", "tests"]
filterwarnings = [
    # I know looponfailroots is 'deprecated' but ... i'm tired of seeing it
    "ignore::DeprecationWarning:xdist.plugin"
]
