[project]
name = "python-planet"
version = "0.9.0"
description = "PythonPlanet RSS/Atom feed aggregator"
readme = "README.pydotorg"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.11",
    "jinja2>=3.1.4",
]

[[authors]]
name = "Scott James Remnant"
email = "scott@netsplit.com"

[[authors]]
name = "Jeff Waugh"
email = "jdub@perkypants.org"

[[authors]]
name = "Jacob Coffee"
email = "jacob@z7x.org"

[[authors]]
name = "Chris Rose"
email = "offline@offby1.net"
